Refactor WorkflowService to use process code and tenant ID for process resolution